syntax = "proto3";

option csharp_namespace = "HuppyService.Service.Protos";

package GPTProto;

service GPTProto {
	rpc DavinciCompletion(GPTInputRequest) returns (GPTOutputResponse);
}

message GPTInputRequest {
	string prompt = 1;
}

message GPTOutputResponse {
	string answer = 1;
}